# VulkanEngine

./: CMakeLists.txt  compile_shaders.bat  setup_vs2019.bat  setup_vs2022.bat
Shaders/: textured_lit.frag.spv  triangle.vert  trimesh.vert.spv
Source/: Main.cpp  MathLib.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  VulkanDescriptors.cpp  VulkanEngine.cpp  VulkanEngine.h  VulkanInitializers.cpp  VulkanInitializers.h  VulkanMesh.cpp  VulkanMesh.h  VulkanTexture.cpp  VulkanTypes.h  Window.cpp  Window.h
Source/Example/: Example.cpp  Example.h
